; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ccm.c_mbedtls_ccm_encrypt_and_tag.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ccm.c_mbedtls_ccm_encrypt_and_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CCM_ENCRYPT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_ccm_encrypt_and_tag(i32* %0, i64 %1, i8* %2, i64 %3, i8* %4, i64 %5, i8* %6, i8* %7, i8* %8, i64 %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i64, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i8*, align 8
  %20 = alloca i64, align 8
  store i32* %0, i32** %11, align 8
  store i64 %1, i64* %12, align 8
  store i8* %2, i8** %13, align 8
  store i64 %3, i64* %14, align 8
  store i8* %4, i8** %15, align 8
  store i64 %5, i64* %16, align 8
  store i8* %6, i8** %17, align 8
  store i8* %7, i8** %18, align 8
  store i8* %8, i8** %19, align 8
  store i64 %9, i64* %20, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = load i32, i32* @CCM_ENCRYPT, align 4
  %23 = load i64, i64* %12, align 8
  %24 = load i8*, i8** %13, align 8
  %25 = load i64, i64* %14, align 8
  %26 = load i8*, i8** %15, align 8
  %27 = load i64, i64* %16, align 8
  %28 = load i8*, i8** %17, align 8
  %29 = load i8*, i8** %18, align 8
  %30 = load i8*, i8** %19, align 8
  %31 = load i64, i64* %20, align 8
  %32 = call i32 @ccm_auth_crypt(i32* %21, i32 %22, i64 %23, i8* %24, i64 %25, i8* %26, i64 %27, i8* %28, i8* %29, i8* %30, i64 %31)
  ret i32 %32
}

declare dso_local i32 @ccm_auth_crypt(i32*, i32, i64, i8*, i64, i8*, i64, i8*, i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
